@@ -26,7 +26,9 @@
 /**
  * @var modX $modx
  */
-require_once $modx->getOption('manager_path', null, MODX_MANAGER_PATH) . 'controllers/default/resource/update.class.php';
+if(!class_exists('ResourceUpdateManagerController')) {
+    require_once $modx->getOption('manager_path', null, MODX_MANAGER_PATH) . 'controllers/default/resource/update.class.php';
+}
 
 /**
  * @package gridclasskey
